--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -83,8 +83,13 @@
             margin-top: 60px;
         }
 
-        @media screen and (min-width: 500px) and (max-width: 1024px) {
+        @media screen and (min-width: 769px) and (max-width: 1024px) {
             /* Styles for Desktops */
+            margin-top: 40px;
+        }
+
+        @media screen and (max-width: 768px) {
+            width: 90%;
             margin-top: 40px;
         }
 
